bootstrapにてトップページを編集

--- a/portfolio/MyProfile/style.css
+++ b/portfolio/MyProfile/style.css
@@ -1,26 +1,12 @@
-span{
-    font-family: 'Courgette', cursive;  /* googlefontsから引用 */
-    font-size: 50px;
-    margin-right: 500px;
-}
-
-.nav-list {
-    text-align: center;
+.nav-item {
+  font-family: 'Holtwood One SC', serif;
+  font-size: 50%;
   }
 
-  .nav-list-item {
-    list-style: none;       /* listの点を消す*/
-    display: inline-block;  /* inline-blockインライン要素にしてで横並びにする*/
-    font-family: 'Courgette', cursive;
-    font-size: 15px;
-    margin: 0 10px;
-  }
-  
-main{
-  background-color: whitesmoke;
+.nav-link{
+    color: darkslateblue;
 }
 
-  footer{
+footer{
     text-align: center;
-    font-family: 'Courgette', cursive;
   }
