--- a/portfolio/MyProfile/style.css
+++ b/portfolio/MyProfile/style.css
@@ -1,12 +1,21 @@
+.alert{
+  margin-bottom: 0rem !important;
+}
+
 .nav-item {
   font-family: 'Holtwood One SC', serif;
-  font-size: 50%;
+  font-size: 15px;
   }
 
 .nav-link{
-    color: darkslateblue;
+  color: darkslateblue;
 }
 
-footer{
-    text-align: center;
+footer{  
+  height: 50px;
+  text-align: center;
   }
+
+div.contact{
+  text-align: center;
+}  
